--- a/index.html
+++ b/index.html
@@ -12,12 +12,26 @@
 </head>
 
 <body>
-    <div class="slidecontainer">
-        <h1 class="display-size">16 x 16</h1>
-        <input type="range" min="1" max="75" value="2" class="slider" id="myRange">
-    </div>
-    <div id="grid-parent">
-        <div id="grid-container">
+
+    <div class="main-grid-container">
+        <header>
+            <h1>Etch-a-Sketch</h1>
+        </header>
+
+        <div class="slide-container">
+            <div>
+                <input class="color-picker" type="color" id="head" name="head" value="#000000">
+                <label for="head">Head</label>
+            </div>
+            <button id="clear-sketch-pad" class="button-28" role="button">Clear</button>
+            <p class="display-size"></p>
+            <div class="slider-container">
+                <input type="range" min="1" max="64" value="32" class="slider" id="myRange">
+            </div>
+        </div>
+        <div id="parent-for-grid">
+            <div id="grid-container">
+            </div>
         </div>
     </div>
 </body>
