--- a/index.html
+++ b/index.html
@@ -12,24 +12,17 @@
 </head>
 
 <body>
-
     <div class="main-grid-container">
-        <header>
+        <header class="grid-item grid-item-1">
             <h1>Etch-a-Sketch</h1>
         </header>
-
-        <div class="slide-container">
-            <div>
-                <input class="color-picker" type="color" id="head" name="head" value="#000000">
-                <label for="head">Head</label>
-            </div>
-            <button id="clear-sketch-pad" class="button-28" role="button">Clear</button>
+        <div class="grid-item grid-item-2" id="slide-container">
+            <input id="color-picker" type="color" value="#000000">
+            <button id="clear-sketch-pad" class="button-28" role="button">Clear Pad</button>
             <p class="display-size"></p>
-            <div class="slider-container">
-                <input type="range" min="1" max="64" value="32" class="slider" id="myRange">
-            </div>
+            <input type="range" min="1" max="64" value="32" class="slider" id="myRange">
         </div>
-        <div id="parent-for-grid">
+        <div id="parent-for-grid" class="grid-item grid-item-3">
             <div id="grid-container">
             </div>
         </div>
