Added color changer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         </header>
         <div class="grid-item grid-item-2" id="slide-container">
             <input id="color-picker" type="color" value="#000000">
-            <button id="clear-sketch-pad" class="button-28" role="button">Clear Pad</button>
+            <button id="eraser" class="button-28" role="button">Eraser</button>
+            <button id="clear-sketch-pad" class="button-28" role="button">Reset</button>
             <p class="display-size"></p>
             <input type="range" min="1" max="64" value="32" class="slider" id="myRange">
         </div>
