--- a/index.html
+++ b/index.html
@@ -12,20 +12,19 @@
 </head>
 
 <body>
-    <div class="main-grid-container">
-        <header class="grid-item grid-item-1">
+    <div id="main-grid-container">
+        <header>
             <h1>Etch-a-Sketch</h1>
         </header>
-        <div class="grid-item grid-item-2" id="slide-container">
+        <div id="control-panel">
             <input id="color-picker" type="color" value="#000000">
-            <button id="eraser" class="button-28" role="button">Eraser</button>
-            <button id="clear-sketch-pad" class="button-28" role="button">Reset</button>
-            <p class="display-size"></p>
-            <input type="range" min="1" max="64" value="32" class="slider" id="myRange">
+            <button id="eraser" class="custom-button" role="button">Eraser</button>
+            <button id="reset-pad" class="custom-button" role="button">Reset</button>
+            <p id="display-grid-dimensions"></p>
+            <input id="range-slider" type="range" min="1" max="64" value="32">
         </div>
-        <div id="parent-for-grid" class="grid-item grid-item-3">
-            <div id="grid-container">
-            </div>
+        <div id="parent-for-grid">
+            <div id="grid-container"></div>
         </div>
     </div>
 </body>
