--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </header>
         <div id="control-panel">
             <input id="color-picker" type="color" value="#000000">
+            <button id="color-toggle" class="custom-button" role="button">Color</button>
             <button id="eraser" class="custom-button" role="button">Eraser</button>
             <button id="reset-pad" class="custom-button" role="button">Reset</button>
             <p id="display-grid-dimensions"></p>
