--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="">
+
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     <script src="js.js" defer></script>
     <title>Etch-A-Sketch</title>
 </head>
@@ -28,6 +29,19 @@
             <div id="grid-container"></div>
         </div>
     </div>
+    <footer class="footer">
+        <p>
+            Copyright ©
+            <script>
+                document.write(new Date().getFullYear())
+            </script>
+            devingdaniels
+            <a href="https://github.com/devingdaniels" target="_blank">
+                <i class="fab fa-github"></i
+                ></a>
+        </p>
+       
+          </footer>
 </body>
 
 </html>
