--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
             <h1>Etch-a-Sketch</h1>
         </header>
         <div id="control-panel">
-            <input id="color-picker" type="color" value="#000000">
+            <input id="color-picker" type='color' value="#000000">
             <button id="color-toggle" class="custom-button" role="button">Color</button>
             <button id="eraser" class="custom-button" role="button">Eraser</button>
             <button id="reset-pad" class="custom-button" role="button">Reset</button>
             <p id="display-grid-dimensions"></p>
             <input id="range-slider" type="range" min="1" max="64" value="32">
         </div>
-        <div id="parent-for-grid">
-            <div id="grid-container"></div>
-        </div>
+        <div id="parent-for-grid" class="grid"></div>
     </div>
     <footer class="footer">
         <p>
